Bug 17650 - abidiff aborts while running on abidw.so libs with message "terminate called after throwing an instance of 'std::length_error'"
Summary: abidiff aborts while running on abidw.so libs with message "terminate called ...
Status: RESOLVED FIXED
Alias: None
Product: libabigail
Classification: Unclassified
Component: default (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Dodji Seketeli
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-26 07:06 UTC by Sinny Kumari
Modified: 2014-12-11 08:59 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sinny Kumari 2014-11-26 07:06:10 UTC
Running abidiff on abidw.so library from elfutils 0.158 and 0.160 aborts with following message:
terminate called after throwing an instance of 'std::length_error'
  what():  vector::reserve
Aborted

abidw libs from packages on which abidiff ran:
elfutils 0.158
-------------
rpm - https://kojipkgs.fedoraproject.org//packages/elfutils/0.158/3.fc20/x86_64/elfutils-libs-0.158-3.fc20.x86_64.rpm
debug - https://kojipkgs.fedoraproject.org//packages/elfutils/0.158/3.fc20/x86_64/elfutils-debuginfo-0.158-3.fc20.x86_64.rpm

elfutils 0.160
-------------
rpm - https://kojipkgs.fedoraproject.org//packages/elfutils/0.160/1.fc20/x86_64/elfutils-libs-0.160-1.fc20.x86_64.rpm
debug - https://kojipkgs.fedoraproject.org//packages/elfutils/0.160/1.fc20/x86_64/elfutils-debuginfo-0.160-1.fc20.x86_64.rpm
Comment 1 Dodji Seketeli 2014-12-11 08:59:29 UTC
This should be fixed by commit https://sourceware.org/git/?p=libabigail.git;a=commit;h=e8a0fbaeee9b896fdc7fda4f73f7e513ce972605