Fix several aborts while diffing libdw.so

Several crashes were spotted when running abidiff on the libdw.so from
elfutils versions 0.158 and 0.160.  This is the problem report
https://sourceware.org/bugzilla/show_bug.cgi?id=17650 and the patch
below addresses that.

	* src/abg-corpus.cc
	(corpus::priv::build_unreferenced_symbols_tables): Fix wrong
	guestimation of the size of the map of unreferenced symbol table.
	* src/abg-dwarf-reader.cc (get_version_needed_for_versym): Honour
	the conditions of breaking out from walking the verneed table.

Signed-off-by: Dodji Seketeli <dodji@redhat.com>